# pybada

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  docker-compose.yml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: build_docker.sh  build_docs.sh  local_ci.sh  push_docker.sh  setup_pyenv_uv.sh  temp.rst  upgrade.py
scripts/source/apidoc/: hello.config.rst  hello.hello.rst  hello.rst
source/: licenses.rst
tests/: climb_test.py
